# iam-rust-user

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
migrations/: 0001_init.sql  0002_soft_delete.sql
src/: consumer.rs  grpc.rs  main.rs  repo.rs
