[package]
name = "user-service"
version = "0.5.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
common = { git = "https://github.com/malvinpratama/iam-rust-common", tag = "v0.8.0" }
proto = { git = "https://github.com/malvinpratama/iam-rust-proto", tag = "v0.9.0" }
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-health = "0.14"
tonic-tracing-opentelemetry = "0.38"
prost = "0.14"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1"
async-nats = "0.37"
serde_json = "1"
futures = "0.3"
